Fixed overflow

--- a/main.css
+++ b/main.css
@@ -27,3 +27,9 @@ html {
 	cursor: none;
 	background: #000;
 }
+
+body {
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+}
